@@ -1,6 +1,14 @@
 # ChangeLog for x11-libs/qt-assistant
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.10 2008/05/30 04:30:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.12 2008/06/13 23:20:12 ingmar Exp $
+
+  13 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  qt-assistant-4.4.0-r1.ebuild:
+  Make all split Qt4 ebuilds block the old monolithic ebuild.
+
+  13 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org>
+  -qt-assistant-4.4.0.ebuild:
+  Old.
 
   30 May 2008; Jeroen Roovers <jer@gentoo.org> qt-assistant-4.4.0-r1.ebuild:
   Marked ~hppa (bug #223557).
